website architecture done

--- a/Whatsapp Automation/multi-add-to-new-group/Website/html5up-astral/assets/css/main_ethereal.css
+++ b/Whatsapp Automation/multi-add-to-new-group/Website/html5up-astral/assets/css/main_ethereal.css
@@ -2185,8 +2185,8 @@ input, select, textarea {
 		-ms-align-items: -ms-stretch;
 		align-items: stretch;
 		height: 100%;
-		overflow-x: auto;
-		overflow-y: auto;
+		overflow-x: hidden;/*SCROLL-BAR*/
+		overflow-y: hidden;
 	}
 
 		.panel > * {
