--- a/Whatsapp Automation/multi-add-to-new-group/Website/html5up-astral/assets/css/main.css
+++ b/Whatsapp Automation/multi-add-to-new-group/Website/html5up-astral/assets/css/main.css
@@ -1771,7 +1771,7 @@ input, select, textarea {
 
 	#nav {
 		text-align: center;
-		height: 4.25em;
+		height: 3.7em;/*NAV-HEIGHT*/
 		cursor: default;
 	}
 
@@ -1780,7 +1780,7 @@ input, select, textarea {
 			display: inline-block;
 			color: #ffffff;
 			width: 1em;
-			height: 1em;
+			height: 0.75em;/*HEIGHT B/W ICON AND ARROW*/
 			line-height: 0.9em;
 			font-size: 2.5em;
 			margin: 0 0.25em 0 0.25em;
@@ -1821,9 +1821,13 @@ input, select, textarea {
 				position: absolute;
 				background: #222222;
 				color: #ffffff;
-				top: -2.75em;
-				font-size: 0.3em;
+                
+                /*START-UPAR WAALI CAPTION*/
+				top: -1.75em;
 				height: 2.25em;
+                /*END-UPAR WAALI CAPTION*/
+                                
+                font-size: 0.3em;
 				line-height: 2.25em;
 				left: 50%;
 				opacity: 0;
@@ -1977,10 +1981,11 @@ input, select, textarea {
 				}
 
 			}
-
+            
+            /*HEIGHT IDHAR SE CHANGE HOGI*/
 			#main > .panel.intro {
 				padding: 0;
-				height: 20em;
+				height: 24em;/*NEECHE SE WHITE BAR IDHAR SE HATEGA*/
 				display: -moz-flex;
 				display: -webkit-flex;
 				display: -ms-flex;
