--- a/Whatsapp Automation/multi-add-to-new-group/Website/html5up-astral/assets/css/main.css
+++ b/Whatsapp Automation/multi-add-to-new-group/Website/html5up-astral/assets/css/main.css
@@ -1778,12 +1778,15 @@ input, select, textarea {
 		#nav a {
 			position: relative;
 			display: inline-block;
-			color: #ffffff;
+            /*COLOR OF THE ICON*/
+			color: #CB6E78;
+            color: #736194;
 			width: 1em;
 			height: 0.75em;/*HEIGHT B/W ICON AND ARROW*/
 			line-height: 0.9em;
 			font-size: 2.5em;
 			margin: 0 0.25em 0 0.25em;
+            
 			opacity: 0.35;
 			outline: 0;
 			-moz-transition: opacity .25s ease-in-out;
